@@ -18,22 +18,49 @@ The system is built as a reactive pipeline using **Eclipse Vert.x 5**:
 
 1.  **MainVerticle**: The entry point that deploys other verticles and starts the HTTP server. It configures Hazelcast for clustering.
 2.  **PreProcessingVerticle**:
-    -   Converts raw text input into a **Dense Vector** (64-dim) by summing word embeddings.
+    -   Converts raw text input into a **Dense Vector** (128-dim) by summing word embeddings.
     -   Maintains a mutable `Map<String, float[]>` of word embeddings.
     -   Exposes a **Training Channel** to update embeddings or "pull" vectors closer (e.g., making "love" and "like" semantically similar).
 3.  **InferenceVerticle**: Receives the dense vector and performs the matrix multiplication using the `LinearLayer`. It implements **backpressure** handling to protect the system from overload.
+    -   Input Dim: 128 (Dense Embedding)
+    -   Output Dim: 256 (Prediction Features)
+
+---
+
+## 🧠 Model Configuration
+Current production settings:
+- **Embedding Dimension**: 128
+- **Inference Output Dimension**: 256
+
+---
+
+### 🎯 Semantic Selection
+The system supports **Semantic Selection** (Classification). By training word groups (e.g. "Fruits" vs "Tech"), the vectors produced by `/infer` for words in the same group will be semantically closer. This allows you to "select" or "classify" data based on meaning rather than just keywords.
 
 The components communicate asynchronously via the **Vert.x EventBus**.
 
 ## 🏋️ Training & Control
 You can update the AI's "knowledge" (embeddings) at runtime via the `/train` endpoint.
 
-**Example: Pulling words closer**
-To make the embedding for "love" closer to "like":
+**Example: Pulling multiple words closer**
+To make embeddings for "love", "like", and "affection" closer:
 ```bash
 curl -X POST http://localhost:8080/train \
      -H "Content-Type: application/json" \
-     -d '{"type": "pull", "word1": "love", "word2": "like", "rate": 0.5}'
+     -d '{"type": "pull", "words": ["love", "like", "affection"], "rate": 0.5}'
+```
+
+**Example: Batch training via text file**
+You can send a plain text body to `/train` where each line follows the format: `[type] [rate] [word1] [word2] ...`
+```bash
+curl -X POST http://localhost:8080/train \
+     -H "Content-Type: text/plain" \
+     --data-binary @training_data.txt
+```
+*File `training_data.txt` content:*
+```text
+pull 0.2 love like affection
+pull 0.5 java vertx vector api
 ```
 
 **Example: Updating a word vector**
@@ -91,17 +118,60 @@ mvn exec:exec@run-benchmarks
 ```
 
 ### 4. Run Verification Tests
-To verify the training channel logic:
+To verify the training channel logic and word similarity:
 
 ```bash
 # Compile tests
 mvn test-compile
 
-# Run EmbeddingTrainingTest class
+# Run Multi-Word Training Test
 java --enable-preview --add-modules jdk.incubator.vector \
      -cp target/classes:target/test-classes:$(mvn dependency:build-classpath -Dmdep.outputFile=/dev/stdout -q) \
-     com.example.ai.EmbeddingTrainingTest
+     com.example.ai.MultiWordTrainingTest
+
+# Run Batch Training Assertion Test (uses training_data.txt)
+java --enable-preview --add-modules jdk.incubator.vector \
+     -cp target/classes:target/test-classes:$(mvn dependency:build-classpath -Dmdep.outputFile=/dev/stdout -q) \
+     com.example.ai.BatchTrainingAssertionTest
 ```
+
+This test verifies that multiple words can be pulled together simultaneously and that batch training via text data works as expected.
+
+### 5. Run Semantic Selection (Classification) Test
+To see the system "select" the right category for a word after training:
+
+```bash
+java --enable-preview --add-modules jdk.incubator.vector \
+     -cp target/classes:target/test-classes:$(mvn dependency:build-classpath -Dmdep.outputFile=/dev/stdout -q) \
+     com.example.ai.SemanticSelectionTest
+```
+
+This test trains two distinct groups ("Fruits" and "Tech") and verifies that `apple` is correctly classified as more similar to `banana` than to `code`.
+
+### How to Assert Training Results
+To verify if training is working correctly:
+1.  **Quantitative Check**: Use the `similarity` command via the `/train` endpoint to measure the Cosine Similarity between two words before and after training.
+2.  **Expected Outcome**: If you use the `pull` type, the similarity between the target words should increase (approach 1.0).
+3.  **Automated Assertion**: The `BatchTrainingAssertionTest.java` demonstrates this by picking a case from `training_data.txt`, measuring initial similarity, sending the batch data, and then confirming the similarity has increased.
+
+### 6. Real-World Application: Semantic Search (Indexing) Test
+This test demonstrates how to use the system for indexing documents and performing similarity-based retrieval (Semantic Search).
+
+**The Workflow:**
+1.  **Extract & Train**: Words from multiple files are used to "pull" semantic groups together.
+2.  **Indexing**: Each file is passed through `/infer` to generate a high-dimensional "Document Vector" (Fingerprint).
+3.  **Dictionary storage**: These fingerprints are stored in a local Map (Semantic Index).
+4.  **Querying**: A user query (e.g., "i want to eat some apple") is vectorized via `/infer`.
+5.  **Matching**: The query vector is compared against all document vectors using **Cosine Similarity**.
+6.  **Retrieval**: Files with the highest similarity (e.g., `fruit_info.txt`) are returned to the frontend.
+
+```bash
+java --enable-preview --add-modules jdk.incubator.vector \
+     -cp target/classes:target/test-classes:$(mvn dependency:build-classpath -Dmdep.outputFile=/dev/stdout -q) \
+     com.example.ai.RealWorldSemanticSearchTest
+```
+
+This test simulates indexing three files (`fruit_info.txt`, `tech_news.txt`, `weather.txt`) and correctly identifies the relevant document for a semantic query.
 
 ---
 
@@ -117,6 +187,10 @@ src/
 │       └── PreProcessingVerticle.java # Dense Embeddings & Training
 └── test/java/com/example/ai/
     ├── EmbeddingTrainingTest.java # Verification of Training Channel
+    ├── WordSimilarityTest.java    # Quantitative Similarity Verification
+    ├── MultiWordTrainingTest.java # Verification of multi-word and batch training
+    ├── RealWorldSemanticSearchTest.java # Demo of real-world indexing and search
+    ├── SemanticSelectionTest.java # Demo of word-level classification
     ├── LoadTest.java             # System Load Test (Vert.x WebClient)
     └── benchmark/
         └── VectorBenchmark.java  # JMH Microbenchmark
